re PR target/59396 ([avr] Wrong warning with ISR() and -flto)

PR target/59396
	* config/avr/avr.c (avr_set_current_function): Pass function name
	through default_strip_name_encoding before sanity checking instead
	of skipping the first char of the assembler name.

From-SVN: r208562